--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "flow-copy-source": "^2.0.2",
     "gitdown": "^2.5.5",
     "husky": "^1.3.1",
+    "map-obj": "^3.0.0",
     "nyc": "^13.1.0",
     "semantic-release": "^15.13.2",
     "sinon": "^7.2.2"
