--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-canonical": "^15.0.1",
     "flow-bin": "^0.89.0",
     "flow-copy-source": "^2.0.2",
+    "get-port": "^4.1.0",
     "gitdown": "^2.5.5",
     "husky": "^1.3.1",
     "map-obj": "^3.0.0",
